Restore French pages with correct paths and encoding + backup 20251109_212455

--- a/www.abrirestaurant.com/fr/click-and-collect.html
+++ b/www.abrirestaurant.com/fr/click-and-collect.html
@@ -235,7 +235,7 @@ var path = "templates/theme3666/js/index.html";
 				<div class="col-sm-2">
 					<div class="logo">
 						<div class="logo-image">
-							<a href="../index.html" title="Abri">
+							<a href="index.html" title="Abri">
 																	<img class="logo-img" src="../images/logo.html" alt="Abri" />
 																								
 							</a>
@@ -261,7 +261,7 @@ var path = "templates/theme3666/js/index.html";
 								<div  class="t3-megamenu animate fading"  data-duration="400" data-responsive="true">
 <ul itemscope itemtype="http://www.schema.org/SiteNavigationElement" class="nav navbar-nav level0">
 <li itemprop='name' class="mega-align-left" data-id="101" data-level="1" data-alignsub="left">
-<a itemprop='url' class="fullwidth"  href="../index.html"   data-target="#">Accueil </a>
+<a itemprop='url' class="fullwidth"  href="index.html"   data-target="#">Accueil </a>
 
 </li>
 <li itemprop='name'  data-id="901" data-level="1">
@@ -291,7 +291,7 @@ var path = "templates/theme3666/js/index.html";
 									<div class="moduletable   col-sm-3"><div class="module_container"><div class="mod-menu">
 	<ul class="menu link">
 	<li class="item-893">
-<a class="btn" href="/fr/click-and-collect.html" >Commander</a>
+<a class="btn" href="click-and-collect.html" >Commander</a>
 </li>
 	</ul>
 </div></div></div>
@@ -316,7 +316,7 @@ var path = "templates/theme3666/js/index.html";
 	<ul itemscope="" itemtype="https://schema.org/BreadcrumbList" class="breadcrumb breadcrumb__">
 	
 				<li class="breadcrumb-item" itemprop="itemListElement" itemscope="" itemtype="https://schema.org/ListItem">
-											<a itemprop="item" href="../index.html" class="pathway"><span itemprop="name">Accueil</span></a>
+											<a itemprop="item" href="index.html" class="pathway"><span itemprop="name">Accueil</span></a>
 										<meta itemprop="position" content="1">
 				</li>
 						<li itemprop="itemListElement" itemscope="" itemtype="https://schema.org/ListItem" class="breadcrumb-item active">
