--- a/www.abrirestaurant.com/fr/politique-de-protection-des-donnees.html
+++ b/www.abrirestaurant.com/fr/politique-de-protection-des-donnees.html
@@ -174,7 +174,7 @@ var path = "templates/theme3666/js/index.html";
 				<div class="col-sm-2">
 					<div class="logo">
 						<div class="logo-image">
-							<a href="../index.html" title="Abri">
+							<a href="index.html" title="Abri">
 																	<img class="logo-img" src="../images/logo.html" alt="Abri" />
 																								
 							</a>
@@ -200,23 +200,23 @@ var path = "templates/theme3666/js/index.html";
 								<div  class="t3-megamenu animate fading"  data-duration="400" data-responsive="true">
 <ul itemscope itemtype="http://www.schema.org/SiteNavigationElement" class="nav navbar-nav level0">
 <li itemprop='name' class="mega-align-left" data-id="101" data-level="1" data-alignsub="left">
-<a itemprop='url' class="fullwidth"  href="../index.html"   data-target="#">Accueil </a>
+<a itemprop='url' class="fullwidth"  href="index.html"   data-target="#">Accueil </a>
 
 </li>
 <li itemprop='name'  data-id="901" data-level="1">
-<a itemprop='url' class=""  href="/fr/presentation.html"   data-target="#">Présentation   </a>
+<a itemprop='url' class=""  href="presentation.html"   data-target="#">Présentation   </a>
 
 </li>
 <li itemprop='name'  data-id="902" data-level="1">
-<a itemprop='url' class=""  href="/fr/la-carte.html"   data-target="#"> La Carte  </a>
+<a itemprop='url' class=""  href="la-carte.html"   data-target="#"> La Carte  </a>
 
 </li>
 <li itemprop='name'  data-id="903" data-level="1">
-<a itemprop='url' class=""  href="/fr/click-and-collect.html"   data-target="#">Click and Collect </a>
+<a itemprop='url' class=""  href="click-and-collect.html"   data-target="#">Click and Collect </a>
 
 </li>
 <li itemprop='name'  data-id="142" data-level="1">
-<a itemprop='url' class=""  href="/fr/contact.html"   data-target="#">Contact </a>
+<a itemprop='url' class=""  href="contact.html"   data-target="#">Contact </a>
 
 </li>
 </ul>
@@ -230,7 +230,7 @@ var path = "templates/theme3666/js/index.html";
 									<div class="moduletable   col-sm-3"><div class="module_container"><div class="mod-menu">
 	<ul class="menu link">
 	<li class="item-893">
-<a class="btn" href="/fr/click-and-collect.html" >Commander</a>
+<a class="btn" href="click-and-collect.html" >Commander</a>
 </li>
 	</ul>
 </div></div></div>
@@ -253,7 +253,7 @@ var path = "templates/theme3666/js/index.html";
 <ul itemscope itemtype="https://schema.org/BreadcrumbList" class="breadcrumb breadcrumb__">
 	
 				<li class="breadcrumb-item" itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
-											<a itemprop="item" href="../index.html" class="pathway"><span itemprop="name">Accueil</span></a>
+											<a itemprop="item" href="index.html" class="pathway"><span itemprop="name">Accueil</span></a>
 										<meta itemprop="position" content="1">
 				</li>
 						<li itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem" class="breadcrumb-item active">
@@ -289,7 +289,7 @@ var path = "templates/theme3666/js/index.html";
 		<div class="item_fulltext"><p>Pour toute demande ou traitement sur vos droits Informatiques et Libertés sur les traitements des données personnelles, contactez-nous par mail : <a href="mailto:contact@abrirestaurant.com">contact@abrirestaurant.com</a></p>
 <h3><span class="item_title_part_0 item_title_part_odd item_title_part_first_half item_title_part_first">Qu'est-ce</span> <span class="item_title_part_1 item_title_part_even item_title_part_first_half">qu'un</span> <span class="item_title_part_2 item_title_part_odd item_title_part_second_half">cookie</span> <span class="item_title_part_3 item_title_part_even item_title_part_second_half item_title_part_last">?</span></h3>
 <p>Un "cookie" est une suite d'informations, généralement de petite taille et identifié par un nom, qui peut être transmis à votre navigateur par un site web sur lequel vous vous connectez. Votre navigateur web le conservera pendant une certaine durée, et le renverra au serveur web chaque fois que vous vous y reconnecterez. <br />Ils existent plusieurs types de cookies.<br />- Les cookies internes : Ils sont nécessaires au bon fonctionnement du site internet.<br />- Les cookies de mesure d'audience<br />- Les cookies tiers déposés par des services externes : Ils permettent d'améliorer le site internet.</p>
-<p>3 types de cookies peuvent être déposer sur le site <a href="../index.html">abrirestaurant.com</a></p>
+<p>3 types de cookies peuvent être déposer sur le site <a href="index.html">abrirestaurant.com</a></p>
 <h4><span class="item_title_part_0 item_title_part_odd item_title_part_first_half item_title_part_first">Cookies</span> <span class="item_title_part_1 item_title_part_even item_title_part_second_half item_title_part_last">internes</span></h4>
 <table class="responsive-rgpd" style="width: 100%;">
 <tbody>
@@ -334,7 +334,7 @@ var path = "templates/theme3666/js/index.html";
 <p><br />Ces données ne sont pas cédées à des tiers ni utilisées à d'autres fins que consulter les diverses statistiques de notre site.</p>
 <p><iframe style="height: 100%; width: 100%; border: none;" src="https://stats.octa-solutions.fr/index.php?module=CoreAdminHome&amp;action=optOut&amp;language=fr&amp;backgroundColor=&amp;fontColor=&amp;fontSize=1rem&amp;fontFamily='Lexend%20Deca',%20sans-serif" width="300" height="150"></iframe></p>
 <h4><span class="item_title_part_0 item_title_part_odd item_title_part_first_half item_title_part_first">Cookies</span> <span class="item_title_part_1 item_title_part_even item_title_part_first_half">tiers</span> <span class="item_title_part_2 item_title_part_odd item_title_part_first_half">destinés</span> <span class="item_title_part_3 item_title_part_even item_title_part_first_half">à</span> <span class="item_title_part_4 item_title_part_odd item_title_part_second_half">améliorer</span> <span class="item_title_part_5 item_title_part_even item_title_part_second_half">le</span> <span class="item_title_part_6 item_title_part_odd item_title_part_second_half item_title_part_last">site</span></h4>
-<p>Le site <a href="../index.html">abrirestaurant.com</a> utilise des services externes apportés des sites tiers. Ces services peuvent déposer des cookies sur votre ordinateur. Ils ont pour but d'améliorer la qualité du site internet et de rendre plus agréable la navigation. <br /><br />Nous utilisons par exemple :<br />- Des boutons de partages (Facebook, twitter)<br />- Des murs d'actualités (Facebook, twitter)<br />- Service de PDF en ligne (Calaméo)<br />- Services Google (Recaptcha)<br />- Services vidéo (Youtube, Dailymotion, Viméo)<br /><br />Si vous le désirez, vous pouvez modifier vos choix sur l'utilisation des cookies en <a href="#cookies">cliquant ici</a></p> </div>
+<p>Le site <a href="index.html">abrirestaurant.com</a> utilise des services externes apportés des sites tiers. Ces services peuvent déposer des cookies sur votre ordinateur. Ils ont pour but d'améliorer la qualité du site internet et de rendre plus agréable la navigation. <br /><br />Nous utilisons par exemple :<br />- Des boutons de partages (Facebook, twitter)<br />- Des murs d'actualités (Facebook, twitter)<br />- Service de PDF en ligne (Calaméo)<br />- Services Google (Recaptcha)<br />- Services vidéo (Youtube, Dailymotion, Viméo)<br /><br />Si vous le désirez, vous pouvez modifier vos choix sur l'utilisation des cookies en <a href="#cookies">cliquant ici</a></p> </div>
 		
 	
 	<!-- Social Sharing -->
