--- a/www.abrirestaurant.com/fr/index.html
+++ b/www.abrirestaurant.com/fr/index.html
@@ -351,7 +351,7 @@ var path = "templates/theme3666/js/index.html";
 				<div class="col-sm-2">
 					<div class="logo">
 						<div class="logo-image">
-							<a href="/fr//fr/index.html" title="Abri">
+							<a href="index.html" title="Abri">
 																	<img class="logo-img" src="../images/logo.html" alt="Abri" />
 																								
 							</a>
@@ -377,23 +377,23 @@ var path = "templates/theme3666/js/index.html";
 								<div  class="t3-megamenu animate fading"  data-duration="400" data-responsive="true">
 <ul itemscope itemtype="http://www.schema.org/SiteNavigationElement" class="nav navbar-nav level0">
 <li itemprop='name' class="current active mega-align-left" data-id="101" data-level="1" data-alignsub="left">
-<a itemprop='url' class="fullwidth"  href="/fr//fr/index.html"   data-target="#">Accueil </a>
+<a itemprop='url' class="fullwidth"  href="index.html"   data-target="#">Accueil </a>
 
 </li>
 <li itemprop='name'  data-id="901" data-level="1">
-<a itemprop='url' class=""  href="/fr//fr/presentation.html"   data-target="#">Présentation   </a>
+<a itemprop='url' class=""  href="presentation.html"   data-target="#">Présentation   </a>
 
 </li>
 <li itemprop='name'  data-id="902" data-level="1">
-<a itemprop='url' class=""  href="/fr//fr/la-carte.html"   data-target="#"> La Carte  </a>
+<a itemprop='url' class=""  href="la-carte.html"   data-target="#"> La Carte  </a>
 
 </li>
 <li itemprop='name'  data-id="903" data-level="1">
-<a itemprop='url' class=""  href="/fr//fr/click-and-collect.html"   data-target="#">Click and Collect </a>
+<a itemprop='url' class=""  href="click-and-collect.html"   data-target="#">Click and Collect </a>
 
 </li>
 <li itemprop='name'  data-id="142" data-level="1">
-<a itemprop='url' class=""  href="/fr//fr/contact.html"   data-target="#">Contact </a>
+<a itemprop='url' class=""  href="contact.html"   data-target="#">Contact </a>
 
 </li>
 </ul>
@@ -407,7 +407,7 @@ var path = "templates/theme3666/js/index.html";
 									<div class="moduletable   col-sm-3"><div class="module_container"><div class="mod-menu">
 	<ul class="menu link">
 	<li class="item-893">
-<a class="btn" href="/fr//fr/click-and-collect.html" >Commander</a>
+<a class="btn" href="click-and-collect.html" >Commander</a>
 </li>
 	</ul>
 </div></div></div>
@@ -433,8 +433,8 @@ var path = "templates/theme3666/js/index.html";
 	<div class="swiper-wrapper">
 		
 <div class="swiper-slide "
-data-slide-bg="images/home/new-slider.webp"
-data-slide-bg-fallback="images/home/new-slider.jpg"
+data-slide-bg="../images/home/new-slider.webp"
+       
 >
 		<div class="slide-inner">
 	        <div class="container">
@@ -518,17 +518,17 @@ data-slide-bg-fallback="images/home/new-slider.jpg"
 <p>Cadre cosy, service sans chichis, viens te poser chez Abri. Que tu aies envie d’une belle pita à base de porc effiloché cuit de longues heures au barbecue ou d’un bowl avec des falafels bien croustillantes et une sauce qui déboîte, tu verras, on est bien. Tu n’en as pas assez ? Teste nos petits sides qui détonnent.</p>
 <div class="flex-mid">
 <div>
-<p><a class="btn" href="/fr//fr/la-carte.html">notre carte</a></p>
+<p><a class="btn" href="la-carte.html">notre carte</a></p>
 </div>
 <div>
-<p><a class="btn" href="/fr//fr/click-and-collect.html">Commander au tel ou te faire livrer  </a></p>
+<p><a class="btn" href="click-and-collect.html">Commander au tel ou te faire livrer  </a></p>
 </div>
 </div>
 </div>
 <div class="text grid-item-3">
 <h3><span class="item_title_part_0 item_title_part_odd item_title_part_first_half item_title_part_first">Fast</span> <span class="item_title_part_1 item_title_part_even item_title_part_second_half item_title_part_last">Good</span></h3>
 <p>Chez Abri, on a qu’une seule envie, de donner du bonheur et de la fraîcheur avec nos produits. Du 100% home made et plein d’influences culinaires (même si on préfère la belle méditerranée)</p>
-<p><a class="btn" href="/fr//fr/presentation.html">découvrir</a></p>
+<p><a class="btn" href="presentation.html">découvrir</a></p>
 </div>
 <div class="img grid-item-4"><img src="../images/home/ABRI_52.html"" alt="" /></div>
 </div></div>
@@ -717,9 +717,9 @@ SARL CHABIZ (Grenoble) SIREN 948 310 453
 					<span class="copy">&copy;</span>
 					<span class="year">2025</span>
 											<span>| </span>
-				        <a class="privacy_link" rel="license" href="/fr//fr/mentions-legales.html">
+				        <a class="privacy_link" rel="license" href="mentions-legales.html">
 				            Mentions Légales				        </a>
-						<a class="terms_link" href="/fr//fr/politique-de-protection-des-donnees.html">- Données personnelles</a>
+						<a class="terms_link" href="politique-de-protection-des-donnees.html">- Données personnelles</a>
 						- Réalisation <a target="_blank" href="https://www.octacom.fr/" title="Agence de publicité, création de site internet, marketing entreprise"><img src="http://www.octacom.fr/images/logo-blanc.png" style="vertical-align: middle;" border="0" width="80px"></a>
 									</div>
 
