Refactor language selection and order button styles in index.html; remove old language links

--- a/www.abrirestaurant.com/fr/la-carte.html
+++ b/www.abrirestaurant.com/fr/la-carte.html
@@ -165,7 +165,7 @@ var path = "templates/theme3666/js/index.html";
 					<div class="logo">
 						<div class="logo-image">
 							<a href="index.html" title="Abri">
-																	<img class="logo-img" src="../images/logo.webp" alt="Abri Restaurant - Pitas et Bowls" />
+																	<img class="logo-img" src="../images/logo.html" alt="Abri Restaurant - Pitas et Bowls" />
 																								
 							</a>
 							<small class="site-slogan"></small>
