Update presentation.html for improved structure and styling

--- a/www.abrirestaurant.com/fr/presentation.html
+++ b/www.abrirestaurant.com/fr/presentation.html
@@ -308,7 +308,7 @@
 
 														</li>
 														<li itemprop='name' data-id="903" data-level="1">
-															<a itemprop='url' class="" href="click-and-collect.html"
+															<a itemprop='url' class="" href="commander.html"
 																data-target="#">Commander </a>
 
 														</li>
