--- a/www.abrirestaurant.com/fr/contact.html
+++ b/www.abrirestaurant.com/fr/contact.html
@@ -435,29 +435,18 @@
 
 								<div class="row">
 									<!-- Contact -->
-									<h2><span
+									<h2>
+										<span
 											class="item_title_part_0 item_title_part_odd item_title_part_first_half item_title_part_first">Email</span>
 										<span
 											class="item_title_part_1 item_title_part_even item_title_part_second_half item_title_part_last">:</span>
 									</h2>
+
 									<div class="contact_details_emailto">
 										<i class="icons-marker fa fa-envelope"></i>
-										<span id="cloak94b34e7d325d7d314b60d1a7e074faaf">Cette adresse e-mail est
-											protégée contre les robots spammeurs. Vous devez activer le JavaScript pour
-											la visualiser.</span>
-										<script type='text/javascript'>
-											document.getElementById('cloak94b34e7d325d7d314b60d1a7e074faaf').innerHTML = '';
-											var prefix = '&#109;a' + 'i&#108;' + '&#116;o';
-											var path = 'hr' + 'ef' + '=';
-											var addy94b34e7d325d7d314b60d1a7e074faaf = 'c&#111;nt&#97;ct' + '&#64;';
-											addy94b34e7d325d7d314b60d1a7e074faaf = addy94b34e7d325d7d314b60d1a7e074faaf +
-												'&#97;br&#105;r&#101;st&#97;&#117;r&#97;nt' + '&#46;' + 'c&#111;m';
-											var addy_text94b34e7d325d7d314b60d1a7e074faaf = 'c&#111;nt&#97;ct' + '&#64;' +
-												'&#97;br&#105;r&#101;st&#97;&#117;r&#97;nt' + '&#46;' + 'c&#111;m';
-											document.getElementById('cloak94b34e7d325d7d314b60d1a7e074faaf').innerHTML += '<a ' + path + '\'' + prefix +
-												':' + addy94b34e7d325d7d314b60d1a7e074faaf + '\'>' + addy_text94b34e7d325d7d314b60d1a7e074faaf + '<\/a>';
-										</script>
+										<a href="mailto:abri-restaurant@outlook.com">abri-restaurant@outlook.com</a>
 									</div>
+
 									<div class="clearfix"></div>
 
 									<div class="clearfix"></div>
